--- a/estilos.css
+++ b/estilos.css
@@ -245,6 +245,8 @@ a:hover{
 
 .title{
     width: 100%;
+    color: #FFF;
+    text-shadow: 0 5px 10px rgba(0,0,0,.2);
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -484,12 +486,83 @@ a:hover{
 }
 
 .button:hover{
-    background-color: #2EE59D;
+    background-color: #0d2033;
     box-shadow: 0px 15px 20px  rgba(46,229,157,0.4);
     color: #FFF;
     transform: translateY(-7px);
 }
 
+/*<!======Our Services======!>*/
+.card-services{
+    background: #EEE;
+    padding: 15px 9%;
+    padding-bottom: 50px;
+}
+
+.card-services .heading{
+    text-align: center;
+    padding-bottom: 15px;
+    color: #FFF;
+    text-shadow: 0 5px 10px rgba(0,0,0,.2);
+    font-size: 50px;
+}
+
+.card-services .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 15px;
+}
+
+.card-services .box-container .box{
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    border-radius: 5px;
+    text-align: start;
+    padding: 30px 20px;
+}
+
+.card-services .box-container .box img{
+    height: 80px;
+}
+
+.card-services .box-container .box h3{
+    text-align: start;
+    color: #444;
+    font-size: 22px;
+    padding: 10px 0;
+}
+
+.card-services .box-container .box p{
+    color: #777;
+    font-size: 15px;
+    line-height: 1.3;
+    text-align: justify;
+}
+
+.card-services .box-container .box .btn{
+    margin: 30px 5px;
+    display: inline-block;
+    background: #333;
+    color: #FFF;
+    font-size: 17px;
+    border-radius: 30px;
+    padding: 8px 12px;
+}
+
+.card-services .box-container .box .btn:hover{
+    cursor: pointer;
+}
+
+.card-services .box-container .box:hover{
+    box-shadow: 0 10px 15px rgba(0,0,0,.3);
+    transform: scale(1.03);
+    transition: all 0.3s ease;
+}
+
+@media (max-width: 768px){
+    .card-services{
+        padding: 20px;
+    }
+}
 
 /*<!======Footer======!>*/
 .pie-pagina{
