cambio en las páginas jóvenes investigadores, investigadores y pasantes

--- a/estilos.css
+++ b/estilos.css
@@ -493,7 +493,7 @@ a:hover{
 }
 
 /*<!======Our Services======!>*/
-.card-services{
+/* .card-services{
     background: #EEE;
     padding: 15px 9%;
     padding-bottom: 50px;
@@ -504,7 +504,7 @@ a:hover{
     padding-bottom: 15px;
     color: #FFF;
     text-shadow: 0 5px 10px rgba(0,0,0,.2);
-    font-size: 50px;
+    font-size: 3rem;
 }
 
 .card-services .box-container{
@@ -562,7 +562,7 @@ a:hover{
     .card-services{
         padding: 20px;
     }
-}
+} */
 
 /*<!======Footer======!>*/
 .pie-pagina{
