--- a/assets/css/jovenesInvestigadores.css
+++ b/assets/css/jovenesInvestigadores.css
@@ -40,148 +40,276 @@
   color: #000;
   }
   
-  /*<!======Cards JOVENES INVESTIGADORES======!>*/
-  
-  .title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 0px;
+  /*<!======INTRO JOVENES INVESTIGADORES======!>*/
+  section {
+    padding: 60px 0;
   }
   
-  .description{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 0px;
+  .why-us .container {
+    box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
+    background: #fff;
   }
-  .container-cards{
-    width:900px;
-    margin: 100px auto;
+  
+  .why-us .icon-box+.icon-box {
+    margin-top: 50px;
   }
-  /* Float three columns side by side */
-  .column {
+  
+  .why-us .icon-box .icon {
     float: left;
-    width: 33.33%;
-    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 72px;
+    height: 72px;
+    background: #f3f8fa;
+    border-radius: 6px;
+    transition: 0.5s;
   }
   
-  /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;}
+  .why-us .icon-box .icon i {
+    color: #68A4C4;
+    font-size: 32px;
+  }
   
-  /* Clear floats after the columns */
-  .row:after {
+  .why-us .icon-box:hover .icon {
+    background: #68A4C4;
+  }
+  
+  .why-us .icon-box:hover .icon i {
+    color: #fff;
+  }
+  
+  .why-us .icon-box .title {
+    margin-left: 95px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 18px;
+    text-transform: uppercase;
+  }
+  
+  .why-us .icon-box .title a {
+    color: #343a40;
+    transition: 0.3s;
+  }
+  
+  .why-us .icon-box .title a:hover {
+    color: #68A4C4;
+  }
+  
+  .why-us .icon-box .description {
+    margin-left: 95px;
+    line-height: 24px;
+    font-size: 14px;
+  }
+  
+  .why-us .video-box {
+    position: relative;
+  }
+  
+  .why-us .video-box img {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  
+  .why-us .play-btn {
+    width: 94px;
+    height: 94px;
+    background: radial-gradient(#68A4C4 50%, rgba(104, 164, 196, 0.4) 52%);
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    left: calc(50% - 47px);
+    top: calc(50% - 47px);
+    overflow: hidden;
+  }
+  
+  .why-us .play-btn::after {
     content: "";
-    display: table;
-    clear: both;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 100;
+    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
   }
   
-  /* Responsive columns */
-  @media screen and (max-width: 700px) {
-    
-   .container-cards{
-    width: 100%;
+  .why-us .play-btn::before {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    animation-delay: 0s;
+    animation: pulsate-btn 2s;
+    animation-direction: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(104, 164, 196, 0.7);
+    top: -15%;
+    left: -15%;
+    background: rgba(198, 16, 0, 0);
   }
-    
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
+  
+  .why-us .play-btn:hover::after {
+    border-left: 15px solid #68A4C4;
+    transform: scale(20);
+  }
+  
+  .why-us .play-btn:hover::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border: none;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 200;
+    animation: none;
+    border-radius: 0;
+  }
+  
+  @keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+  
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
     }
   }
-  
-  /* Style the counter cards */
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 5px;
-    text-align: center;
-    background-color: #fff;
-    border-radius:10px;
-    cursor:pointer;
-  }
-  .card .profile{
-     border-radius:10px;
-     transition: 0.2s;
-  }
-  .card:hover .profile{
-    transform:scale(1.4);
-    border-top-right-radius:50px;
-    border-top-left-radius:50px;
-  }
-  
-  .card .content{
-    width:100%;
-    height:100%;
-    position:relative;
-    overflow:hidden;
-  }
-  .card .content .back{
-    position:absolute;
-    width:100%;
-    height:100%;
-    background-color: #f1f1f1e6;
-    transition:1s;
+
+  /*<!=======CARDS JOVENES INVESTIGADORES=======>*/
+  .team .member {
+    position: relative;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    }
     
-    z-index:1;
-    padding:10px;
-  }
-  
-  .from-left{
-    top:0;
-    left:-100%;
-  }
-  .card:hover .content .from-left {
-     left:0%;
-  }
-  
-  .from-bottom{
-    top:100%;
-    left:0;
-  }
-  .card:hover .content .from-bottom {
-     top:0%;
-  }
-  
-  .from-right{
-    top:0%;
-    right:-100%;
-  }
-  .card:hover .content .from-right {
-     right:0;
-  }
-  
-  .card .content .back h3{
-    font-size:15px;
-    letter-spacing:2px;
-  }
-  .card .content .back .tem-img{
-    border-radius:100%;
-  }
-  
-  .card .content .back .des{
-    font-size:13px;
-    padding:20px 0px;
-  }
-  .card .content .back .social-icon{
-    list-style:none;
-    margin:0px;
-    padding:0px;
-  }
-  .card .content .back .social-icon li{
-    padding-right: 10px;
-    display:inline-block;
-  }
-  
-  .card .content .back .social-icon li a{
-    display:block;
-    background:#333;
-    color:#fff;
-    width:40px;
-    height:40px;
-    text-align:center;
-    line-height:40px;
-    border-radius:100%;
-  }
+    .team .member .teampic {
+    overflow: hidden;
+    width: 180px;
+    border-radius: 50%;
+    }
+    
+    .team .member .member-info {
+    padding-left: 30px;
+    }
+    
+    .team .member h4 {
+    font-weight: 700;
+    margin-bottom: 5px;
+    font-size: 20px;
+    color: tomato;
+    }
+    
+    .team .member span {
+    display: block;
+    font-size: 15px;
+    padding-bottom: 10px;
+    position: relative;
+    font-weight: 500;
+    }
+    
+    .team .member span::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    background: #000;
+    bottom: 0;
+    left: 0;
+    }
+    
+    .team .member p {
+    margin: 10px 0 0 0;
+    font-size: 14px;
+    }
+    
+    .team .member .social {
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    }
+    
+    .team .member .social a {
+    display: flex;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    background: #eff2f8;
+    }
+    
+    .team .member .social a i {
+    color: #000;
+    font-size: 16px;
+    margin: 0 2px;
+    }
+    
+    .team .member .social a:hover {
+      text-decoration: none;
+      background: #0d2033;
+      transition: all 0.3s ease-in-out;
+    }
+    
+    .team .member .social a:hover i {
+    color: #fff;
+    }
+    
+    .team .member .social a+a {
+    margin-left: 8px;
+    }
+    
+    section {
+    padding: 60px 0;
+    overflow: hidden;
+    }
+    
+    
+    
+    .section-title {
+    text-align: center;
+    padding-bottom: 30px;
+    }
+    
+    .section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+    color: tomato;
+    }
+    
+    .underline{
+        width: 150px;
+        height: 1px;
+        background-color: black;
+        margin: auto;
+        margin-top: -30px;
+    }
+    
+    .section-title p {
+    margin-top: 20px;
+    }
   
   
   /*<!=======FOOTER=======>*/
