--- a/assets/css/proyectos.css
+++ b/assets/css/proyectos.css
@@ -1,12 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,400&display=swap');
-*{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    scroll-padding-top: 2rem;
-    box-sizing: border-box;
-}
 
 /* root values */
 :root{
@@ -16,17 +8,8 @@
     --bg-color: #fff;
 }
 
-::selection{
-    color: var(--bg-color);
-    background: var(--second-color);
-}
-
 a{
     text-decoration: none;
-}
-
-li{
-    list-style: none;
 }
 
 img{
@@ -37,7 +20,7 @@ section{
     padding: 3rem 0 2rem;
 }
 
-.container{
+.container-nav{
     max-width: 1068px;
     margin: 1rem auto;
     width: 100%;
@@ -48,11 +31,12 @@ a{
 }
 
 /*Navbar With Hover - Bootstrap*/
+
 .site-navbar {
     margin-bottom: 0px;
     z-index: 1999;
     position: absolute;
-    top: 2rem;
+    /* top: .5rem; */
     width: 100%; 
   }
   .site-navbar.transparent {
@@ -219,7 +203,7 @@ a{
     visibility: visible;
     opacity: 1;
   }
-  
+
   .site-mobile-menu {
     width: 300px;
     position: fixed;
@@ -403,57 +387,7 @@ a{
     padding-left: 15px !important; 
 }
 
-
-/* Header */
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 200;
-}
-
-header.shadow{
-    background: var(--bg-color);
-    box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
-    transition: .5s;
-}
-
-header.shadow .logo{
-    color: var(--text-color);
-}
-
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px 0;
-}
-
-.logo{
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: var(--bg-color);
-}
-
-.logo span{
-    color: var(--second-color);
-}
-
-.login{
-    padding: 8px 14px;
-    text-transform: uppercase;
-    font-weight: 500;
-    border-radius: 4px;
-    background: var(--second-color);
-    color: var(--bg-color);
-}
-
-.login:hover{
-    background: hsl(199, 98%, 56%);
-    transition: .5s;
-}
-
+/*Blog Content Style*/
 .home{
     width: 100%;
     min-height: 440px;
@@ -477,64 +411,12 @@ header.shadow .logo{
     font-weight: 400;
 }
 
-.about{
-    position: relative;
-    width: 100%;
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-}
-
-.about .contentBx{
-    max-width: 50%;
-    width: 50%;
-    text-align: left;
-    padding-right: 40px;
-}
-
-.titleText{
-    font-weight: 600;
-    color: #111;
-    font-size: 2rem;
-    margin-bottom: 10px;
-}
-
-.title-text{
-    color: #111;
-    font-size: 1em;
-}
-
-.about .imgBx{
-    position: relative;
-    min-width: 50%;
-    width: 50%;
-    min-height: 500px;
-}
-
-.btn2{
-    position: relative;
-    display: inline-block;
-    margin-top: 30px;
-    padding: 10px 30px;
-    background: #fff;
-    border: .8px solid #111;
-    color: #333;
-    text-decoration: none;
-    transition: 0.5s;
-}
-
-.btn2:hover{
-    background-color: var(--second-color);
-    border: none;
-    color: #fff;
-}
-
 .post-filter{
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 1.5rem;
-    margin-top: 2rem !important;
+    margin: 1rem auto;
 }
 
 .filter-item{
@@ -555,6 +437,7 @@ header.shadow .logo{
     grid-template-columns: repeat(auto-fit, minmax(280px, auto));
     justify-content: center;
     gap: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .post-box{
@@ -577,6 +460,7 @@ header.shadow .logo{
     font-weight: 500;
     text-transform: uppercase;
     color: var(--second-color);
+    margin-top: .5rem;
 }
 
 .post-title{
@@ -607,26 +491,6 @@ header.shadow .logo{
     overflow: hidden;
 }
 
-.profile{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.profile-img{
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    border: 2px solid var(--second-color);
-}
-
-.profile-name{
-    font-size: .8rem;
-    font-weight: 500;
-}
-
 @media (max-width: 1060px){
     .container{
         margin: 1rem auto;
@@ -638,11 +502,7 @@ header.shadow .logo{
     }
 }
 
-@media (max-width: 768px){
-    .nav{
-        padding: 10px 0;
-    }
-
+@media (max-width: 700px){
     section{
         padding: 2rem 0 !important;
     }
@@ -836,14 +696,10 @@ header.shadow .logo{
 }
 
 @media screen and (max-width: 700px){
-    .pie-pagina{
-        margin-top: -400px;
-    }
-
-    .pie-pagina .group-1 .red-social a{
+    /* .pie-pagina .group-1 .red-social a{
         display: inline-block;
         margin: 10px 25px;
-    }
+    } */
 
     .footer-links{
         margin-left: -40px;
