--- a/estilos.css
+++ b/estilos.css
@@ -398,7 +398,7 @@
 }
 
 .img-1{
-    background: url("https://cenigaa.org/wp/wp-content/uploads/2023/03/NOSOTROS.jpg");
+    background: url("./assets/img/equipoCenigaa.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
