--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-/**
-* Template Name: Moderna
-* Updated: May 30 2023 with Bootstrap v5.3.0
-* Template URL: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -551,9 +543,9 @@ section {
   padding: 60px 0;
 }
 
-.section-bg {
+/* .section-bg {
   background-color: #f3f8fa;
-}
+} */
 
 .section-title {
   text-align: center;
