--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,6 +679,7 @@ section {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
+  text-align: center;
 }
 
 .services .title a {
@@ -737,6 +738,10 @@ section {
 
 .services .icon-box-blue:hover {
   border-color: #2282ff;
+}
+
+.services .box-content{
+  text-align: left;
 }
 
 /*--------------------------------------------------------------
