se borraron partes de codigo comentado y archivos que no hacen nada

--- a/assets/css/investigadores.css
+++ b/assets/css/investigadores.css
@@ -724,6 +724,11 @@ color: #0DF053;
 background: #FFF;
 }
 
+.fondo-cenigaa{
+  background-image: linear-gradient(to right, rgb(10, 10, 11),rgb(50, 49, 61),rgb(10, 10, 11)), url("../img/cenigaa_blanconegro.jfif");
+  width: 100%;
+}
+
 @media screen and (max-width:800px){
 .pie-pagina .grupo-1{
   width: 90%;
