--- a/assets/css/nosotros.css
+++ b/assets/css/nosotros.css
@@ -355,11 +355,6 @@
 }
 
 /*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
-
-
-/*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
 section {
@@ -706,11 +701,90 @@ section {
 }
 
 @media screen and (max-width:800px){
-.pie-pagina .grupo-1{
-  width: 90%;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap:30px;
-  padding: 35px 0px;
-}
+  .pie-pagina .grupo-1{
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap:30px;
+    padding: 35px 0px;
+  }
 }
 
+/*<!======Whatsapp Button======!>*/
+.btn-wsp{
+  position: fixed;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  bottom: 30px;
+  right: 30px;
+  background: #0DF053;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+  z-index: 100;
+}
+
+.btn-wsp:hover{
+  text-decoration: none;
+  color: #0DF053;
+  background: #FFF;
+}
+
+
+.fondo-cenigaa{
+background-image: linear-gradient(to right, rgb(10, 10, 11),rgb(50, 49, 61),rgb(10, 10, 11)), url("../img/cenigaa_blanconegro.jfif");
+width: 100%;
+}
+
+/*Inicio del css del loader */
+.loading-page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  color: #191654;
+}
+
+#svg {
+  height: 150px;
+  width: 150px;
+  stroke: white;
+  fill-opacity: 0;
+  stroke-width: 3px;
+  stroke-dasharray: 4500;
+  animation: draw 8s ease;
+}
+
+@keyframes draw {
+  0% {
+    stroke-dashoffset: 4500;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+.name-container {
+  height: 30px;
+  overflow: hidden;
+}
+
+.logo-name {
+  color: #fff;
+  font-size: 90%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-left: 10px;
+  font-weight: bolder;
+}
+
+/*fin del css del loader */
