--- a/assets/css/pasantes.css
+++ b/assets/css/pasantes.css
@@ -623,6 +623,50 @@
     .section-title p {
     margin-top: 20px;
     }
+
+  /*<!====Counter====!>*/
+  .container-intern{
+    margin-top: 50px;
+}
+
+.counter-box {
+	display: block;
+	background: #f6f6f6;
+	padding: 20px 5px;
+	text-align: center;
+}
+
+.counter-box p {
+	margin: 5px 0 0;
+	padding: 0;
+	color: #909090;
+	font-size: 18px;
+	font-weight: 500
+}
+
+.counter-box i {
+	font-size: 60px;
+	margin: 0 0 15px;
+	color: #d2d2d2
+}
+
+.counter { 
+	display: block;
+	font-size: 32px;
+	font-weight: 700;
+	color: #666;
+	line-height: 28px
+}
+
+.counter-box.colored {
+  background: #3acf87;
+}
+
+.counter-box.colored p,
+.counter-box.colored i,
+.counter-box.colored .counter {
+	color: #fff
+}
   
   /*<!=======FOOTER=======>*/
   .pie-pagina{
