--- a/assets/css/pasantes.css
+++ b/assets/css/pasantes.css
@@ -624,10 +624,11 @@
     margin-top: 20px;
     }
 
-  /*<!====Counter====!>*/
+  /*<!====Counter====!>
   .container-intern{
     margin-top: 50px;
-}
+    
+}*/
 
 .counter-box {
 	display: block;
