logo cenigaa modal

--- a/assets/css/pasantes.css
+++ b/assets/css/pasantes.css
@@ -624,12 +624,7 @@
     margin-top: 20px;
     }
 
-  /*<!====Counter====!>
-  .container-intern{
-    margin-top: 50px;
-    
-}*/
-
+/*<!====Counter====!>*/
 .counter-box {
 	display: block;
 	background: #f6f6f6;
