--- a/assets/css/califiaciónESAL.css
+++ b/assets/css/califiaciónESAL.css
@@ -563,6 +563,11 @@
   background: #FFF;
 }
 
+.fondo-cenigaa{
+  background-image: linear-gradient(to right, rgb(10, 10, 11),rgb(50, 49, 61),rgb(10, 10, 11)), url("../img/cenigaa_blanconegro.jfif");
+  width: 100%;
+}
+
 /*Inicio del css del loader */
 .loading-page {
   position: absolute;
