solucion dropdown collapse

--- a/assets/css/investigadores.css
+++ b/assets/css/investigadores.css
@@ -174,9 +174,9 @@
 .site-mobile-menu {
   width: 300px;
   position: fixed;
-  right: 0;
+  right: 10px;
   z-index: 2000;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   background: #fff;
   height: calc(100vh);
   -webkit-transform: translateX(110%);
