--- a/estilos.css
+++ b/estilos.css
@@ -378,6 +378,21 @@
   line-height: 1.9;
 }
 
+.fade-in-text{
+  animation: an 1s ease-out 1 both;
+}
+
+@keyframes an {
+  from{
+    opacity: 0;
+    transform: perspective(500px) translate3d(-35px, -40px, -150px) rotate3d(1, -1, 0, 35deg);
+  }
+  to{
+    opacity: 1;
+    transform: perspective(500px) translate3d(0,0,0);
+  }
+}
+
 /*<!======About Us======!>*/
 .grid{
     display: flex;
