--- a/estilos.css
+++ b/estilos.css
@@ -370,12 +370,22 @@
   letter-spacing: 2px;
   margin-top: 25px;
 }
+
+.carousel-caption h5:hover{
+  text-shadow: 1px 1px 2px #000;
+  transition: all .5s ease-in;
+}
   
 .carousel-caption p {
   width: 75%;
   margin: auto;
   font-size: 18px;
   line-height: 1.9;
+}
+
+.carousel-caption p:hover{
+  text-shadow: 1px 1px 2px #000;
+  transition: all .5s ease-in;
 }
 
 .fade-in-text{
