--- a/assets/css/investigadores.css
+++ b/assets/css/investigadores.css
@@ -528,7 +528,7 @@
     font-weight: 700;
     margin-bottom: 5px;
     font-size: 20px;
-    color: tomato;
+    color: #0d2033;
     }
     
     .team .member span {
@@ -611,7 +611,7 @@
     margin-bottom: 20px;
     padding-bottom: 20px;
     position: relative;
-    color: tomato;
+    color: #0d2033;
     }
     
     .underline{
