--- a/assets/css/noticias-eventos.css
+++ b/assets/css/noticias-eventos.css
@@ -736,12 +736,14 @@ a{
   width: 5%;
   height: 5%;
   margin-top: 50%;
+  background-color: #C5C6C5;
 }
 
 .carousel-control-prev{
   width: 5%;
   height: 5%;
   margin-top: 50%;
+  background-color: #C5C6C5;
 }
 
 /*<!======Whatsapp Button======!>*/
