--- a/assets/css/noticias-eventos.css
+++ b/assets/css/noticias-eventos.css
@@ -394,6 +394,16 @@ a{
     align-items: center;
 }
 
+.home_proyecto{
+  width: 100%;
+  min-height: 440px;
+  background: url("../img/Proyects/fondo_nucleares.jpg") no-repeat;
+  background-size: cover;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
 .home-text{
     color: var(--bg-color);
     text-align: center;
